k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: ia-ds-template
    version: v1
  name: ia-ds-template
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ia-ds-template
      version: v1
  strategy: { }
  template:
    metadata:
      labels:
        app: ia-ds-template
        version: v1
      annotations:
        sidecar.istio.io/inject: "true"
    spec:
      containers:
        - image: 827126933480.dkr.ecr.us-west-2.amazonaws.com/ia-ds-template
          name: ia-ds-template
          #imagePullPolicy: Always
          ports:
            - containerPort: 8090
          livenessProbe:
            initialDelaySeconds: 5
            httpGet:
              path: /actuator/health/liveness
              port: 8091
          readinessProbe:
            initialDelaySeconds: 10
            httpGet:
              path: /actuator/health/readiness
              port: 8091
          resources:
            requests:
              memory: "1024Mi"
              cpu: "400m"
            limits:
              memory: "1024Mi"
              cpu: "4000m"
      dnsConfig:
        searches:
          - intacct.com
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: ia-ds-template
  name: ia-ds-template-svc
spec:
  ports:
    - name: http
      port: 8090
      protocol: TCP
      targetPort: 8090
      appProtocol: http
    - name: actuator
      port: 8091
      protocol: TCP
      targetPort: 8091
      appProtocol: http
  selector:
    app: ia-ds-template
    version: v1
  type: ClusterIP
