k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: istio
spec:
  controller: istio.io/ingress-controller
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-ds-template-v0
spec:
  ingressClassName: istio
  rules:
    - http:
        paths:
          - path: /ia/api/v0/objects/dummy
            pathType: Prefix
            backend:
              service:
                name: ds-template-svc
                port:
                  number: 8090
          - path: /ia/api/v0/objects/contact
            pathType: Prefix
            backend:
              service:
                name: ds-template-svc
                port:
                  number: 8090
